# Game_Agent

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT_ALL_SKILLS.md  AGENT_COMMUNICATION.md  AI_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.md  ORCHESTRATOR_UPDATE.md  PORTABILITY.md  README.md  SKILLS_MANIFEST.md  openclaw-security-checklist.md  openclaw.hardened.example.json  pyproject.toml  requirements.txt  transformers.pyi  unsloth.pyi
.github/workflows/: check.yml
AI_Training/agents/: EXECUTOR.md  ROUTING.md  TELEGRAM.md
AI_Training/skills/: COMPLIANCE.md  CORE.md  GAMEDEV.md  LOGGING.md  MEMORY.md  MEMORY_MANAGEMENT.md  SHADER.md  SKILLS_INDEX.md  TASK_MANAGEMENT.md  VISION.md  code-reviewer.md  godot_skills_pack.md  math-geometry.md  performance.md  senior-architect.md
docs/: ORCHESTRATOR_UPDATE.md  PORTABILITY.md  SECURITY_CHECKLIST.md
langgraph/: graph_definition.py  state.py
langgraph/nodes/: coder_warrior.py  (+3 more)
mcp/: MCP_SKILLS_MAPPING.json  mcp_config.json
openclaw_configs/: gamedev-agent.Modelfile  mcp_config.json  openclaw.json.example
prompt_master/: prompt_master_schema.md
scripts/: bootstrap_agent.py  cleanup_project.sh  clone_ecosystem.sh  filter_top_skills.py  generate_ide_prompt.sh  ingest_repos.py  model_manager.py  quick_verify.sh  repair_ingest.sh  rotate_gateway_token.sh  sequential_train.sh  setup_env.sh  task_db.py  task_manager.py  unity_mcp_setup.py  update_engine_standard.py  warrior.py
training/: README.md  requirements-train.txt  requirements.txt  run_training.sh
(+9 files in other folders)
