[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "game-agent"
version = "0.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["study", ".venv", ".git", "__pycache__"]

[tool.pyre]
source_directories = ["."]
search_path = [".", "langgraph", "scripts", "tests"]
ignore = ["study/", ".venv/", "unsloth_compiled_cache/"]
strict = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "scripts/bootstrap_agent.py",
    "scripts/filter_top_skills.py",
    "scripts/ingest_repos.py",
    "scripts/unity_mcp_setup.py",
    "scripts/update_engine_standard.py",
    "scripts/warrior.py",
    "langgraph/test_fusion.py"
]
